Avoid layout shift as icons load in

--- a/style.css
+++ b/style.css
@@ -276,6 +276,8 @@ a.anchor:hover span {
   font-size: 40px!important;
   line-height: 40px!important;
   transform: translate(0px, 5px);
+  width: 40px!important;
+  height: 40px!important;
   font-variation-settings:
   'FILL' 0,
   'wght' 400,
